# src/app/backend/docs/swagger.json
@@ -1,7 +1,79 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is a Kubernetes-portal api server",
+        "title": "Kubernetes-portal API",
+        "contact": {},
+        "version": "0.0.1"
     },
-    "paths": {}
+    "host": "localhost:9090",
+    "basePath": "/api/v1",
+    "paths": {
+        "/login": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "Get JWEToken",
+                "parameters": [
+                    {
+                        "description": "It contains all the information required to authenticate user.",
+                        "name": "LoginSpec",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.LoginSpec"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.AuthResponse"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "api.AuthResponse": {
+            "type": "object",
+            "properties": {
+                "errors": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "jweToken": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.LoginSpec": {
+            "type": "object",
+            "properties": {
+                "kubeconfig": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "token": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        }
+    }
 }
